syntax = "proto3";
package messages;

option go_package = "backend/modules/api/endpoints/messages/content";

import "google/protobuf/timestamp.proto";

message ContentTeaser {
    string slug = 1;
    string title = 2;
    string description = 3;
    string author = 4;
    string category = 5;
    string type = 6;
    bool monetized = 7;
    uint32 upvotes = 8;
    google.protobuf.Timestamp published = 9;
    google.protobuf.Timestamp edited = 10;
}

message ContentDetails {
    ContentTeaser teaser = 1;
    bool ltr = 2;
    bytes compressed_content = 3;
}

message CategoryTeaser {
    string slug = 1;
    string name = 2;
    string description = 3;
}

message CategoryDetails {
    CategoryTeaser teaser = 1;
    repeated ContentTeaser contents = 2;
}
